--- a/config.toml
+++ b/config.toml
@@ -1,41 +1,2 @@
 title = "Notre-Dame de Paris"
-baseURL = "https://uewdl.github.io"
-languageCode = "zh-cn"
-theme = "ananke"
-resourceDir = "./resources"
-
-DefaultContentLanguage = "cn"
-SectionPagesMenu = "main"
-Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
-googleAnalytics = ""
-enableRobotsTXT = true
-
-[languages]
-  [languages.cn]
-    title = "Ananke"
-    weight = 1
-    contentDir = "content/cn"
-    # languageDirection = 'rtl' for Right-To-Left languages
- # [languages.fr]
- #   title = "Ananke Fr"
-  #  weight = 2
-   # contentDir = "content/fr"
-
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
-
-[params]
-  text_color = ""
-  author = ""
-  favicon = ""
-  site_logo = ""
-  description = "The last theme you'll ever need. Maybe."
-  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  recent_posts_number = 3
-
-[[params.ananke_socials]]
-name = "twitter"
-url = "https://twitter.com/GoHugoIO"
+theme = "hugo-theme-stack"
